// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxDrawer > rendering > applies fullscreen, sheet, translucent and responsive classes with className 1`] = `
<div>
  <dialog
    class="max-large:drawer drawer-bottom fullscreen sheet translucent drawer-fit-content bazinga"
    open=""
    tabindex="-1"
  >
    Test
  </dialog>
</div>
`;

exports[`CxDrawer > rendering > renders a closed dialog with placement classes 1`] = `
<div>
  <dialog
    class="drawer drawer-start"
  >
    Test
  </dialog>
</div>
`;
